@@ -38,7 +38,7 @@ type MongoSource struct {
 }
 
 func (ms *MongoSource) String() string {
-	return fmt.Sprintf("url[%v], name[%v]", ms.URL, ms.ReplicaName)
+	return fmt.Sprintf("url[%v], name[%v]", BlockMongoUrlPassword(ms.URL, "***"), ms.ReplicaName)
 }
 
 // get db version, return string with format like "3.0.1"
