@@ -1,9 +1,12 @@
-2020-10-xx Alibaba Cloud.
+2020-11-04 Alibaba Cloud.
 	* version: 2.4.16
 	* IMPROVE: ignore error when meets namespace not found error in delete
 	operation in single writer. #467
 	* IMPROVE: when "incr_sync.mongo_fetch_method == oplog", support upsert
 	if target is sharding. #380
+	* BUGFIX: fix bug that using change_stream mode can't fetch any data in
+	kafka tunnel with "checkpoint.start_position = 1970-01-01T00:00:00Z".
+	#475.
 
 2020-10-14 Alibaba Cloud.
 	* version: 2.4.15
